# MangaMania

./: CMakeLists.txt  Class Diagram  Downloader.cpp  Downloader.h  Manga.cpp  Manga.h  README.md  UserProgressRecorder.cpp  UserProgressRecorder.h  main.cpp
